--- a/index.html
+++ b/index.html
@@ -22,96 +22,97 @@
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">9 AM</div>
+      <div class="hour col-1">9 AM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">10 AM</div>
+      <div class="hour col-1">10 AM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">11 AM</div>
+      <div class="hour col-1">11 AM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">12 AM</div>
+      <div class="hour col-1">12 AM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">1 PM</div>
+      <div class="hour col-1">1 PM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">2 PM</div>
+      <div class="hour col-1">2 PM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">3 PM</div>
+      <div class="hour col-1">3 PM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">4 PM</div>
+      <div class="hour col-1">4 PM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
     <div class="row">
       <!--Time Column-->
-      <div class="col-1">5 PM</div>
+      <div class="hour col-1">5 PM</div>
       <!--Column to write tasks-widest of them-text input-->
       <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
-      <button type="button" class="SaveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="script.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
 </body>
 
 </html>
