--- a/index.html
+++ b/index.html
@@ -20,96 +20,96 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
-    <div class="row">
+    <div class="row time-block ">
       <!--Time Column-->
-      <div class="hour col-1">9 AM</div>
+      <div class="hour col-1" id= "9">9 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block ">
       <!--Time Column-->
-      <div class="hour col-1">10 AM</div>
+      <div class="hour col-1" id= "10">10 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">11 AM</div>
+      <div class="hour col-1" id="11">11 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">12 AM</div>
+      <div class="hour col-1" id="12">12 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">1 PM</div>
+      <div class="hour col-1" id="1">1 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">2 PM</div>
+      <div class="hour col-1" id="2">2 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">3 PM</div>
+      <div class="hour col-1" id="3">3 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">4 PM</div>
+      <div class="hour col-1" id="4">4 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row">
+    <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1">5 PM</div>
+      <div class="hour col-1" id="5">5 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="taskText col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
   </div>
-  
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
