--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <div class="container">
     <div class="row time-block ">
       <!--Time Column-->
-      <div class="hour col-1" id= "9">9 AM</div>
+      <div class="hour col-1" >9 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id= "9A"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -32,9 +32,9 @@
   <div class="container">
     <div class="row time-block ">
       <!--Time Column-->
-      <div class="hour col-1" id= "10">10 AM</div>
+      <div class="hour col-1" >10 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id= "10A"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -42,9 +42,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="11">11 AM</div>
+      <div class="hour col-1" >11 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="11A"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -52,9 +52,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="12">12 AM</div>
+      <div class="hour col-1" >12 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="12A"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -62,9 +62,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="1">1 PM</div>
+      <div class="hour col-1" >1 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="13"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -72,9 +72,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="2">2 PM</div>
+      <div class="hour col-1" >2 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="14"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -82,9 +82,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="3">3 PM</div>
+      <div class="hour col-1" >3 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="15"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -92,9 +92,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="4">4 PM</div>
+      <div class="hour col-1" >4 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="16"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -102,9 +102,9 @@
   <div class="container">
     <div class="row time-block">
       <!--Time Column-->
-      <div class="hour col-1" id="5">5 PM</div>
+      <div class="hour col-1" >5 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control" id="textarea"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="17"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
