--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
+    <p id="currentHour"></p>
   </header>
   <div class="container">
     <div class="row time-block ">
@@ -64,7 +65,7 @@
       <!--Time Column-->
       <div class="hour col-1" >1 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="13"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="1a"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -74,7 +75,7 @@
       <!--Time Column-->
       <div class="hour col-1" >2 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="14"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="14a"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -84,7 +85,7 @@
       <!--Time Column-->
       <div class="hour col-1" >3 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="15"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="15a"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -94,7 +95,7 @@
       <!--Time Column-->
       <div class="hour col-1" >4 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="16"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textarea" id="16a"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
