--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!--Time Column-->
       <div class="hour col-1">9 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="9"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="9"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -35,7 +35,7 @@
       <!--Time Column-->
       <div class="hour col-1">10 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="10"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="10"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -45,7 +45,7 @@
       <!--Time Column-->
       <div class="hour col-1">11 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="11"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="11"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -55,7 +55,7 @@
       <!--Time Column-->
       <div class="hour col-1">12 AM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="12"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="12"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -65,7 +65,7 @@
       <!--Time Column-->
       <div class="hour col-1">1 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="13"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="13"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -75,7 +75,7 @@
       <!--Time Column-->
       <div class="hour col-1">2 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="14"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="14"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -85,7 +85,7 @@
       <!--Time Column-->
       <div class="hour col-1">3 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="15"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="15"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -95,7 +95,7 @@
       <!--Time Column-->
       <div class="hour col-1">4 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="16"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="16"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
@@ -105,7 +105,7 @@
       <!--Time Column-->
       <div class="hour col-1">5 PM</div>
       <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textarea" id="17"></textarea></div>
+      <div class="description col-8"><textarea class="form-control textInput" id="17"></textarea></div>
       <!--Save button column-->
       <button type="button" class="saveBtn col-1">Save</button>
     </div>
