--- a/index.html
+++ b/index.html
@@ -21,93 +21,70 @@
     <p id="currentHour"></p>
   </header>
   <div class="container">
-    <div class="row time-block ">
-      <!--Time Column-->
+    <!--Creating the hour row and making the hour # the id to pull later-->
+    <div class="row time-block" id="9">
+      <!--Using the hour class and making the column size 1 to show the hour-->
       <div class="hour col-1">9 AM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="9"></textarea></div>
+      <!--Creating a textInput class with the column size 9-->
+      <textarea class="textInput col-9"></textarea>
       <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block ">
-      <!--Time Column-->
+    <div class="row time-block" id="10">
       <div class="hour col-1">10 AM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="10"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="11">
       <div class="hour col-1">11 AM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="11"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="12">
       <div class="hour col-1">12 AM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="12"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="13">
       <div class="hour col-1">1 PM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="13"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="14">
       <div class="hour col-1">2 PM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="14"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="15">
       <div class="hour col-1">3 PM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="15"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="16">
       <div class="hour col-1">4 PM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="16"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
   <div class="container">
-    <div class="row time-block">
-      <!--Time Column-->
+    <div class="row time-block" id="17">
       <div class="hour col-1">5 PM</div>
-      <!--Column to write tasks-widest of them-text input-->
-      <div class="description col-8"><textarea class="form-control textInput" id="17"></textarea></div>
-      <!--Save button column-->
-      <button type="button" class="saveBtn col-1">Save</button>
+      <textarea class="textInput col-9"></textarea>
+      <button type="button" class="saveBtn col-2">Save</button>
     </div>
   </div>
 
